# coursework4

./: README.md  gitignore  main.py  pyproject.toml  test.py  utils.py
JSON_database/: database.json  database_c#_2023-04-03.json  database_c++_2023-04-02.json  database_python_2023-04-02.json  database_администратор_2023-04-02.json  database_аналитик_2023-04-03.json
classes/: __init__.py  connector.py  engine_classes.py  jobs_classes.py
tests/: test_main.py
